把 "primary expression" 翻译成 "初等表达式"
按照 <<C 程序设计语言 (第二版, 新版)>> 的翻译, 把 "primary expression"
翻译成 "初等表达式", 而不是 "主表达式"

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -678,7 +678,7 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 expressions, field (字段) 36
 
-\hangindent=2pc \hangafter=1 expressions, primary (主表达式) 34
+\hangindent=2pc \hangafter=1 expressions, primary (初等表达式) 34
 
 \hangindent=2pc \hangafter=1 expressions, summary of (表达式的总结) 37
 
@@ -1503,7 +1503,7 @@ iii, 2, 21, 34, 53, 187
 
 \hangindent=2pc \hangafter=1 \verb'prep3' program (程序 \verb'prep3') 93
 
-\hangindent=2pc \hangafter=1 primary expressions (主表达式) 34
+\hangindent=2pc \hangafter=1 primary expressions (初等表达式) 34
 
 \hangindent=2pc \hangafter=1 \verb'print >'\textit{file} 90, 188
 
