--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -67,11 +67,11 @@
 
 \hangindent=2pc \hangafter=1 \verb'||' OR operator (``或'' 运算符) 10, 31, 37
 
-\hangindent=2pc \hangafter=1 \verb'>' output redirection (输入重定向) 56, 58, 188
+\hangindent=2pc \hangafter=1 \verb'>' output redirection (输出重定向) 56, 58, 188
 
-\hangindent=2pc \hangafter=1 \verb'>>' output redirection (输入重定向) 56, 58, 188
+\hangindent=2pc \hangafter=1 \verb'>>' output redirection (输出重定向) 56, 58, 188
 
-\hangindent=2pc \hangafter=1 \verb'|' output redirection (输入重定向) 58, 188
+\hangindent=2pc \hangafter=1 \verb'|' output redirection (输出重定向) 58, 188
 
 \hangindent=2pc \hangafter=1 \verb"' '" quotes (单引号) 2, 4-5, 65, 100
 
@@ -123,9 +123,9 @@
 
 \hangindent=2pc \hangafter=1 \verb'/dev/tty' file (文件 \verb'/dev/tty') 59
 
-\hangindent=2pc \hangafter=1 \verb'-f' option (\verb'-f' 选项) 4-5, 63, 65, 187
+\hangindent=2pc \hangafter=1 \verb'-f' option (选项 \verb'-f') 4-5, 63, 65, 187
 
-\hangindent=2pc \hangafter=1 \verb'-F' option (\verb'-F' 选项) 60, 63, 187
+\hangindent=2pc \hangafter=1 \verb'-F' option (选项 \verb'-F') 60, 63, 187
 
 \hangindent=2pc \hangafter=1 \verb'>'\textit{file}, \verb'print' 90, 188
 
@@ -197,17 +197,18 @@
 
 \hangindent=2pc \hangafter=1 \verb'arith' program (程序 \verb'arith') 117
 
-\hangindent=2pc \hangafter=1 arithmetic expression grammar (算法表达式语法) 145
+\hangindent=2pc \hangafter=1 arithmetic expression grammar (算术表达式语法) 145
 
 \hangindent=2pc \hangafter=1 arithmetic functions, summary of
 (算术表达式总结) 190
 
 \hangindent=2pc \hangafter=1 arithmetic functions, table of
-(算术表达式表格) 39
+(算术表达式总结, 表格) 39
 
 \hangindent=2pc \hangafter=1 arithmetic operator (算术运算符) 36, 44
 
-\hangindent=2pc \hangafter=1 arithmetic operator, table of (算术运算符表格) 46
+\hangindent=2pc \hangafter=1 arithmetic operator, table of (算术运算符总结,
+表格) 46
 
 \hangindent=2pc \hangafter=1 array, associative 50-51, (关联数组) 193
 
@@ -234,7 +235,7 @@
 
 \hangindent=2pc \hangafter=1 assignment expression (赋值表达式) 39, 127
 
-\hangindent=2pc \hangafter=1 assignment, multiple (复合赋值) 39
+\hangindent=2pc \hangafter=1 assignment, multiple (多重赋值) 39
 
 \hangindent=2pc \hangafter=1 assignment operator, \verb'%=' (赋值运算符) 38
 
@@ -295,7 +296,7 @@
 \hangindent=2pc \hangafter=1 batch sort test program (批处理形式的排序测
 试程序) 155
 
-\hangindent=2pc \hangafter=1 \verb'BEGIN' and \verb'END', multiple (多个的
+\hangindent=2pc \hangafter=1 \verb'BEGIN' and \verb'END', multiple (多重
 \verb'BEGIN' 与 \verb'END') 23, 169
 
 \hangindent=2pc \hangafter=1 \verb'BEGIN' pattern (模式 \verb'BEGIN') 11, 23, 63
@@ -323,7 +324,8 @@
 
 \hangindent=2pc \hangafter=1 \verb'bridge' program (程序 \verb'bridge') 199
 
-\hangindent=2pc \hangafter=1 built-in variables, table of (内建变量表格) 36
+\hangindent=2pc \hangafter=1 built-in variables, table of (内建变量总结, 
+表格) 36
 
 \hangindent=2pc \hangafter=1 \verb'bundle' program (程序 \verb'bundle') 81
 
@@ -352,7 +354,8 @@
 \hangindent=2pc \hangafter=1 character class, regular expression
 (正则表达式中的字符集) 29
 
-\hangindent=2pc \hangafter=1 characters, table of escape (转义字符表格) 31
+\hangindent=2pc \hangafter=1 characters, table of escape (转义字符总结,
+表格) 31
 
 \hangindent=2pc \hangafter=1 \verb'check' function (函数 \verb'check') 155
 
@@ -471,7 +474,8 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 comparison operators (比较运算符) 36
 
-\hangindent=2pc \hangafter=1 comparison operators, table of (比较运算符表格) 25
+\hangindent=2pc \hangafter=1 comparison operators, table of (比较运算符总结,
+ 表格) 25
 
 \hangindent=2pc \hangafter=1 comparison, string (字符串的比较) 25-26, 44, 184
 
@@ -565,7 +569,7 @@ v, 181, 184, 186
 \hangindent=2pc \hangafter=1 database attribute (数据库中的属性) 103
 
 \hangindent=2pc \hangafter=1 database description (数据库描述文件) ,
-\verb'relflle' 106
+\verb'relfile' 106
 
 \hangindent=2pc \hangafter=1 database, multifile (多文件数据库) 102
 
@@ -641,11 +645,12 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 error messages, printing (打印错误信息) 59
 
-\hangindent=2pc \hangafter=1 error, syntax (语法的错误) 4
+\hangindent=2pc \hangafter=1 error, syntax (语法错误) 4
 
 \hangindent=2pc \hangafter=1 escape sequence (转义序列) 31, 35, 191
 
-\hangindent=2pc \hangafter=1 escape sequences, table of (转义序列表格) 31
+\hangindent=2pc \hangafter=1 escape sequences, table of (转义序列总结,
+表格) 31
 
 \hangindent=2pc \hangafter=1 examples, regular expression (正则表达式的例子) 30
 
@@ -891,7 +896,7 @@ v, 181, 184, 186
 \hangindent=2pc \hangafter=1 generation, program (程序的生成) v, 79, 121, 167
 
 \hangindent=2pc \hangafter=1 generator, \verb'lex' lexical analyzer
-(\verb'lex' 的词法分析器) 152, 181, 186
+(\verb'lex' 词法分析器) 152, 181, 186
 
 \hangindent=2pc \hangafter=1 generator, \verb'yacc' parser (\verb'yacc'
 语法分析器) 152, 175
@@ -1200,10 +1205,10 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 multiline records (多行记录) iv, 60-61, 82
 
-\hangindent=2pc \hangafter=1 multiple assignment (复合赋值) 39
+\hangindent=2pc \hangafter=1 multiple assignment (多重赋值) 39
 
-\hangindent=2pc \hangafter=1 multiple \verb'BEGIN' and \verb'END' (多个
-\verb'BEGIN' 与 \verb'END') 23, 169
+\hangindent=2pc \hangafter=1 multiple \verb'BEGIN' and \verb'END' (多重\verb'BEGIN'
+与 \verb'END') 23, 169
 
 \hangindent=2pc \hangafter=1 Myers. E. 179
 
@@ -1316,7 +1321,7 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 operator, \verb'==' comparison (比较) 9, 44
 
-\hangindent=2pc \hangafter=1 operator, \verb'—-' decrement (自减运算符)
+\hangindent=2pc \hangafter=1 operator, \verb'--' decrement (自减运算符)
 39, 70, 112
 
 \hangindent=2pc \hangafter=1 operator, \verb'^' exponentiation (指数运算符)
@@ -1361,9 +1366,11 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 operators, summary of (运算符总结) 190
 
-\hangindent=2pc \hangafter=1 operators, table of arithmetic (算术运算符表格) 46
+\hangindent=2pc \hangafter=1 operators, table of arithmetic (算术运算符汇总,
+表格) 46
 
-\hangindent=2pc \hangafter=1 operators, table of comparison (比较运算符表格) 25
+\hangindent=2pc \hangafter=1 operators, table of comparison (比较运算符
+汇总, 表格) 25
 
 \hangindent=2pc \hangafter=1 option, \verb'-f' (选项 \verb'-f') 4-5,63,65, 187
 
@@ -1446,7 +1453,7 @@ iii, 2, 21, 34, 53, 187
 \hangindent=2pc \hangafter=1 patterns, summary of string-matching
 (字符串匹配模式的总结) 27
 
-\hangindent=2pc \hangafter=1 patterns, table of (模式表格) 33
+\hangindent=2pc \hangafter=1 patterns, table of (模式汇总, 表格) 33
 
 \hangindent=2pc \hangafter=1 \verb'percent' program (程序 \verb'percent') 70
 
@@ -1454,8 +1461,8 @@ iii, 2, 21, 34, 53, 187
 
 \hangindent=2pc \hangafter=1 performance, insertion sort (插入排序的性能) 158
 
-\hangindent=2pc \hangafter=1 performance measurements, table of (性能测试,
-表格) 183
+\hangindent=2pc \hangafter=1 performance measurements, table of (性能测试
+汇总, 表格) 183
 
 \hangindent=2pc \hangafter=1 performance, quicksort (快速排序的性能) 162
 
@@ -1754,7 +1761,7 @@ v, 79, 121, 167
 
 \hangindent=2pc \hangafter=1 random sentences (随机句子) 113
 
-\hangindent=2pc \hangafter=1 range pattern (随机模式) 32, 85, 187
+\hangindent=2pc \hangafter=1 range pattern (范围模式) 32, 85, 187
 
 \hangindent=2pc \hangafter=1 record separator, output (输出的记录分隔符)
 6, 55-56, 83
@@ -1843,7 +1850,8 @@ v, 79, 121, 167
 \hangindent=2pc \hangafter=1 regular expressions, summary of
 (正则表达式的总结) 28, 191
 
-\hangindent=2pc \hangafter=1 regular expressions, table of (正则表达式表格) 32
+\hangindent=2pc \hangafter=1 regular expressions, table of (正则表达式汇总,
+表格) 32
 
 \hangindent=2pc \hangafter=1 relation, universal (全局关系表) 107
 
@@ -1891,7 +1899,7 @@ v, 79, 121, 167
 
 \hangindent=2pc \hangafter=1 scaffolding (脚手架) 153, 156, 179
 
-\hangindent=2pc \hangafter=1 scalar parameter (标题参数) 54
+\hangindent=2pc \hangafter=1 scalar parameter (标量参数) 54
 
 \hangindent=2pc \hangafter=1 Schmitt, G. vi
 
@@ -2065,7 +2073,8 @@ iii, 2, 21, 34, 53, 187
 
 \hangindent=2pc \hangafter=1 string functions, summary of (字符串函数的总结) 190
 
-\hangindent=2pc \hangafter=1 string functions, table of (字符串函数表格) 42
+\hangindent=2pc \hangafter=1 string functions, table of (字符串函数汇总,
+表格) 42
 
 \hangindent=2pc \hangafter=1 string, null (空字符串) 13, 24, 42, 114, 192
 
