--- a/latex_src/answers_to_selected_exercises.tex
+++ b/latex_src/answers_to_selected_exercises.tex
@@ -46,7 +46,7 @@
     }
 \end{awkcode}
 
-\myexer\ref{exer:bucket} 需要对数据遍历两遍, 其中 1 遍确定桶的范围, 另 1 
+\myexer\ref{exer:bucket} 需要对数据遍历两遍, 其中一遍确定桶的范围, 另一 
     遍把条目分配到桶中.
     
 \marginpar{194}
@@ -564,7 +564,7 @@ or any previous production, rather than this production.}
         size = cnt = 0
     }
 \end{awkcode}
-给 \texttt{printline} 传递一个 ``no'' 参数可以避免对段落的最后一行进行
+给 \texttt{printline} 传递一个参数 ``no'' 可以避免对段落的最后一行进行
 右对齐.
 
 \myexer\ref{exer:lack_underscore} 这取决于遗漏了下划线的符号名是否在文档
