翻译微调: 这样念起来更顺口

--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -8,7 +8,7 @@
 程序都很简单, 它们只是起说明作用, 但是, 其中一些文件准备程序的确拥有实际
 用途.
 
-\section{随机文本发生器}
+\section{生成随机文本}
 \label{sec:random_text_generation}
 
 生成随机数据的程序有多种用途, 这种程序可以用内建函数 \texttt{rand} 
