add the missing word 'not'
Signed-off-by: windclarion <windclarion@gmail.com>

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -126,7 +126,7 @@
 \subsection{\BEGIN 与 \END}
 \label{subsec:the_awk_language_begin_and_end}
 
-\BEGIN 与 \END 这两个模式匹配任何输入行. 实际情况是, 当 awk 从输入读取数据
+\BEGIN 与 \END 这两个模式不匹配任何输入行. 实际情况是, 当 awk 从输入读取数据
 之前, \BEGIN 的语句开始执行;
 当所有输入数据被读取完毕, \END 的语句开始执行.
 于是, \BEGIN 与 \END 分别提供了一种控制初始化与扫尾的方式. \BEGIN 与 \END
