--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -830,9 +830,9 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 \end{awkcode}
 在这个程序里, \BEGIN 动作重新设置 \verb'FS' (\verb'FS' 控制输入行的字段分
 割符) 与 \verb'OS' (\verb'OS' 控制输出的字段分割符) 为 制表符. 第 4 行的
-\print 语句打印可能被修改过的 \verb'$0'. 值得注意的是: 当 \verb'$0' 被
+\print 语句打印可能被修改过的 \verb'$0'. 值得注意的是: 如果 \verb'$0' 发生了
 \marginpar{36}
-修改或重新赋值 (同样的情况也可以发生在 \verb'$1', \verb'$2', 等等), \nf 
+改变 (通过赋值或替换), 那么 \verb'$1', \verb'$2' 等等, 以及 \nf
 就会被重新计算; 同样的道理, 当 \verb'$1' --- 或 \verb'$2' 等 --- 被修改了,
 \verb'$0' 就会被重新构造, 构造的方式是使用 \OFS 重新分割字段.
 
