这里用括号更合适

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -833,7 +833,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 \print 语句打印可能被修改过的 \verb'$0'. 值得注意的是: 如果 \verb'$0' 发生了
 \marginpar{36}
 改变 (通过赋值或替换), 那么 \verb'$1', \verb'$2' 等等, 以及 \nf
-就会被重新计算; 同样的道理, 当 \verb'$1' --- 或 \verb'$2' 等 --- 被修改了,
+就会被重新计算; 同样的道理, 当 \verb'$1' (或 \verb'$2' 等) 被修改了,
 \verb'$0' 就会被重新构造, 构造的方式是使用 \OFS 重新分割字段.
 
 字段也可以通过表达式指定. 例如, \verb'$(NF-1)' 表示当前输入行的倒数第 2 个
