modified by issue #10

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -1469,7 +1469,7 @@ Awk 提供花括号用于语句组合, \verb'if-else' 用于决策, \verb'while'
 
 一条单独的语句总是可以被替换为一个被花括号包围起来的语句列表, 列表中的语句
 用换行符或分号分开, 换行符可以出现在任何左花括号之后, 也可以出现在任何右
-花括号之后.
+花括号之前.
 
 \verb'if-else' 具有形式:
 \begin{pattern}
