modified by issue #8

--- a/latex_src/answers_to_selected_exercises.tex
+++ b/latex_src/answers_to_selected_exercises.tex
@@ -602,7 +602,7 @@ or any previous production, rather than this production.}
 
 \myexer\ref{exer:literal} 如何辨别字面上的 \verb'~' 与作为空格使用
 的 \verb'~' 是一个风格问题. 我们选择使用 awk 的转义序列约定: 当想要字
-面上的字符时, 我们就在字符前加一个反斜杆 \verb'\'. 我们将只考虑
+面上的字符时, 我们就在字符前加一个反斜杠 \verb'\'. 我们将只考虑
 波浪号 \verb'~', 对于其他字符, \texttt{ix.genkey} 和
 \texttt{ix.format} 都作了详尽的阐述.
 为了显示\verb'~', 我们把所有的 \verb'\~' 实例替换成
