--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -105,9 +105,9 @@
 \subsubsection{程序格式}
 语句通过换行符或 (和) 分号隔开. 空行可以出现在任何语句, \patact 语句,
 或函数定义的前面或后面. 空格与制表符可以插入到运算符或操作数的周围. 一条
-长语句可以通过反斜杆延续到下一行. 另外, 如果一条语句在逗号, 左花括号,
+长语句可以通过反斜杠延续到下一行. 另外, 如果一条语句在逗号, 左花括号,
 \verb'&&', \verb'||', \texttt{do}, \texttt{else}, \texttt{if} 或 
-\texttt{for} 的右括号后断行, 则不需要反斜杆. 由 \verb'#' 开始的注释可以
+\texttt{for} 的右括号后断行, 则不需要反斜杠. 由 \verb'#' 开始的注释可以
 出现在任意一行的末尾.
 
 \subsubsection{输入输出}
