--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -24,7 +24,7 @@
 
 \hangindent=2pc \hangafter=1 \verb'=' assignment operator (赋值运算符) 38, 44
 
-\hangindent=2pc \hangafter=1 \verb'\' backslash (反斜杆) 28, 30, 41, 43
+\hangindent=2pc \hangafter=1 \verb'\' backslash (反斜杠) 28, 30, 41, 43
 
 \hangindent=2pc \hangafter=1 \verb'{'...\verb'}' braces (花括号) 15, 22, 47, 167, 188
 
@@ -282,7 +282,7 @@
 
 \hangindent=2pc \hangafter=1 back edge (回边) 173-174
 
-\hangindent=2pc \hangafter=1 backslash, \verb'\' (反斜杆) 28, 30, 41, 43
+\hangindent=2pc \hangafter=1 backslash, \verb'\' (反斜杠) 28, 30, 41, 43
 
 \hangindent=2pc \hangafter=1 backspace character, \verb'\b' (退格符) 31
 
