--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -77,7 +77,7 @@
     { print $1, $3 }    # print country name and population
 \end{awkcode}
 
-一条长语句可以分散成多行, 只要在断行处插入一个反斜杆即可:
+一条长语句可以分散成多行, 只要在断行处插入一个反斜杠即可:
 \begin{awkcode}
     { print \
             $1,     # country name
@@ -288,7 +288,7 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 测试一个字符串是否包含一段可以被正则表达式匹配的子字符串.
 
 最简单的正则表达式是仅由数字与字母组成的字符串, 就像 \verb'Asia', 它匹配的
-就是它本身. 为了将一个正则表达式切换成一个模式, 只需要用一对斜杆包围起来即
+就是它本身. 为了将一个正则表达式切换成一个模式, 只需要用一对斜杠包围起来即
 可:
 \begin{awkcode}
     /Asia/
@@ -318,7 +318,7 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 \end{awkcode}
 只有当 \verb'Asia' 被一对空格包围时才会匹配成功.
 
-上面的模式是三种字符串匹配模式当中的一种. 它的形式是用一对斜杆将正则表达式
+上面的模式是三种字符串匹配模式当中的一种. 它的形式是用一对斜杠将正则表达式
 包围起来:
 \begin{pattern}
     \verb'/'\textit{r}\verb'/'
@@ -393,7 +393,7 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 叫作 \cterm{元字符} (\term{metacharacter}), 之所以这样称呼是因为它们具有
 特殊的意义. 一个由单个非元字符构成的正则表达式匹配它自身. 于是, 一个字母
 或一个数字都算作是一个基本的正则表达式, 与自身相匹配.  为了在正则表达式中
-保留元字符的字面意义, 需要在字符的前面加上反斜杆. 于是, \verb'\$' 匹配
+保留元字符的字面意义, 需要在字符的前面加上反斜杠. 于是, \verb'\$' 匹配
 普通字符 \verb'$'. 如果某个字符前面冠有 \verb'\', 我们就说该字符是被
 \cterm{引用} (\term{quoted}) 的.
 
@@ -511,11 +511,11 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
     \qquad 同样是一个字母, 又或者是一个后面跟着一个数字的字母.
 \end{enumerate}
 在第3个例子中, 为了匹配元字符\verb'+' 与 \verb'-' 的字面值, 必须在它们的
-前面加上反斜线, 而在字符类中则不需要, 所以第 3 项与 第 4 项的功能是等价
+前面加上反斜杠, 而在字符类中则不需要, 所以第 3 项与 第 4 项的功能是等价
 的.
 \marginpar{31}
 
-任意一个被一对斜线包围的正则表达式都可以作为匹配运算符的右操作数: 程序
+任意一个被一对斜杠包围的正则表达式都可以作为匹配运算符的右操作数: 程序
 \begin{awkcode}
     $2 !~ /^[0-9]+$/
 \end{awkcode}
@@ -526,7 +526,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 \verb'\n'
 表示一个换行符, 它无法以其他方式出现在字符串或正则表达式中; \verb'\b' 表示
 退格符; \verb'\t' 表示制表符; \verb'007' 表示 ASCII 中的响铃符; \verb'\/'
-表示一个斜杆. 转义序列在 awk 程序中才会有特殊的意义; 如果在数据中, 它们则
+表示一个斜杠. 转义序列在 awk 程序中才会有特殊的意义; 如果在数据中, 它们则
 是普通的字符. 完整的转义序列名单在表 \ref{tbl:escape_sequences}.
 \begin{figure}[ht]
 \captionsetup{type=table}
@@ -546,7 +546,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
     \verb'\'\textit{ddd} & 八进制数 \textit{ddd}, \textit{ddd}
         含有 1 到 3 个数字, 每个数字的值在 0 到 7 之间 \\
     \verb'\'\textit{c} & 其他的字面意义上的 \textit{c}
-        (举例来说, \verb'\\' 表示反斜杆, \verb'\"' 表示双引号) \\
+        (举例来说, \verb'\\' 表示反斜杠, \verb'\"' 表示双引号) \\
     \hline
 \end{tabular}
 \end{center}
@@ -1063,7 +1063,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 
 \textbf{作为正则表达式的字符串} (\emph{Strings as Regular Expressions}).
 到目前为止, 在所有的匹配表达式中, \verb'~' 与 \verb'!~' 右边的操作数都是
-都是一个被斜杆包围起来的正则表达式. 实际上, 任意一个表达式都可以用作匹配
+都是一个被斜杠包围起来的正则表达式. 实际上, 任意一个表达式都可以用作匹配
 运算符的右操作数. Awk 对这些表达式求值, 如果必要的话将这些值转换成字符串,
 再将这些字符串解释成正则表达式. 例如, 程序
 \begin{awkcode}
@@ -1084,11 +1084,11 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
     }
     $0 ~ number
 \end{awkcode}
-在一个匹配表达中, 一个被双引号包围的字符串, 可以与一个被斜杆包围的正则
+在一个匹配表达中, 一个被双引号包围的字符串, 可以与一个被斜杠包围的正则
 \marginpar{41}
 达式互换着使用, 例如 \verb'"^[0-9]+$"' 与 \verb'/^[0-9]+$/'. 然而有一个
-例外, 如果被双引号包围的字符串想要匹配一个正则表达式元字符的字面值, 当写
-成被斜杆包围的形式时, 就要在反斜杆的前面再加一个反斜杆来保护它. 于是
+例外, 如果被双引号包围的字符串想要匹配一个正则表达式元字符的字面值,
+那就要在反斜杠的前面再加一个反斜杠来保护它. 于是
 \begin{awkcode}
     $0 ~ /(\+|-)[0-9]+/
 \end{awkcode}
@@ -1099,14 +1099,14 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 是等价的.
 
 这种性质可能看起来非常晦涩难懂, 但是, 被双引号包围的字符串被 awk 解析时,
-起保护作用的反斜线就会被移除, 这样想的话应该就容易理解多了. 如果一个正则
-表达式的元字符需要一个反斜杆来暂时移除它的特殊意义, 那么在字符串中,
-这个反斜杆就需要一个额外的反斜杆来保住它自己. 如果一个匹配运算符的右
+起保护作用的反斜杠就会被移除, 这样想的话应该就容易理解多了. 如果一个正则
+表达式的元字符需要一个反斜杠来暂时移除它的特殊意义, 那么在字符串中,
+这个反斜杠就需要一个额外的反斜杠来保住它自己. 如果一个匹配运算符的右
 操作数是一个变量或字段, 正如
 \begin{awkcode}
     x ~ $1
 \end{awkcode}
-那么第 1 个字段中的反斜杆就不需要一层额外的保护, 因为在数据中反斜杆并没有
+那么第 1 个字段中的反斜杠就不需要一层额外的保护, 因为在数据中反斜杠并没有
 特殊的意义.
 
 测试你对正则表达式交互性的理解是很容易的: 程序
@@ -1118,7 +1118,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 
 \textbf{内建字符串函数} (\emph{Built-In String Functions}). 表
 \ref{tbl:built_in_string_functions} 列出了 awk 的内建字符串函数. 在这张表
-中, \textit{r} 表示一个正则表达式 (或者是一个字符串, 或者是被一对斜杆包围
+中, \textit{r} 表示一个正则表达式 (或者是一个字符串, 或者是被一对斜杠包围
 了的). \textit{s} 与 \textit{t} 是字符串表达式, \textit{n} 与 \textit{p}
 是整数.
 \begin{figure}[ht]
@@ -1247,7 +1247,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 \begin{awkcode}
     gsub(/a/, "&b&", "banana")
 \end{awkcode}
-来完成. 在 \verb'&' 的左边加上一个反斜杆就可以关闭它在替换字符串中的特殊
+来完成. 在 \verb'&' 的左边加上一个反斜杠就可以关闭它在替换字符串中的特殊
 意义.
 
 \verb'substr('\textit{s}\verb','\textit{p}\verb')'
