在 23/210 添加一个脚注

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -117,7 +117,7 @@
         \item \pat$_1$\verb',' \pat$_2$ \verb'{' \stmt{}\verb'}' \par
             一个范围模式匹配多个输入行, 这些输入行从匹配 \pat$_1$ 的行开始,
             到匹配 \pat$_2$ 的行结束 (包括这两行), 对这其中的每一行执行
-            \stmt.
+            \stmt.\footnote{\pat$_1$ 与 \pat$_2$ 可以匹配同一行. --- 译者注}
     \end{enumerate}
     \BEGIN 与 \END 不与其他模式组合. 一个范围模式不能是其他模式的一部分.
     \BEGIN 与 \END 是唯一两个不能省略动作的模式.
