纠正 159/210 代码中的一个勘误.

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -310,8 +310,7 @@ hand}
             hsort(A, n)
         else if (sort ~ /i.*sort/)
             isort(A, n)
-        else print
-            "illegal type of sort in", $0
+        else print "illegal type of sort in", $0
         print sort, data, n, comp, exch, comp+exch
     }
 
