不在 pdf 中看见, 但保留在源代码中.
根据全文, 这里应该是笔误.

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -946,8 +946,8 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 Gusella, R. vi
 
-% FIXME 应该是个错误
-\hangindent=2pc \hangafter=1 happiness 30
+% 应该是个笔误, 因此把它注释掉
+% \hangindent=2pc \hangafter=1 happiness 30
 
 \hangindent=2pc \hangafter=1 Hardin, R. H. 130
 
