把 "form letter" 翻译成 "格式信函"
根据 <<编程珠玑 第 2 版, 修订版>>, 把 "form letter" 翻译成 "格式信函",
听起来更顺耳.

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -761,7 +761,7 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 \verb'for' statement (\verb'for' 语句) 16, 49
 
-\hangindent=2pc \hangafter=1 form letters (套用信函) 100
+\hangindent=2pc \hangafter=1 form letters (格式信函) 100
 
 \hangindent=2pc \hangafter=1 form of awk program (awk 程序的形式) 2, 21, 187
 
@@ -1113,7 +1113,7 @@ v, 181, 184, 186
 % \hangindent=2pc \hangafter=1 \marginpar{208}
 \hangindent=2pc \hangafter=1 \verb'length' function (函数 \verb'length') 13-14
 
-\hangindent=2pc \hangafter=1 letters, form (套用信函) 100
+\hangindent=2pc \hangafter=1 letters, form (格式信函) 100
 
 \hangindent=2pc \hangafter=1 \verb'lex' lexical analyzer generator
 (\verb'lex' 词法分析器生成程序) 152, 181, 186
