--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -66,7 +66,7 @@ hand}
 当外层循环结束时, 所有的 \textit{n} 个元素都处于有序状态.
 
 数值或字符串都可以用这个程序进行排序. 但是当输入数据同时含有数值与字符
-串时, 就要小心一点 --- 由于强制类型转换, 比较结果可能会让你感到惊讶.
+串时, 就要小心一点 --- 由于强制类型转换, 比较结果可能会让读者感到惊讶.
 
 如果数组 \texttt{A} 含有以下 8 个整数:
 \begin{file}
@@ -329,19 +329,19 @@ hand}
 \begin{exercise}
     \label{exer:check}
     实际上, 函数 \texttt{check} 并不是一个很强大的测试, 什么样的错误会
-    使它检测失败? 你会如何改进?
+    使它检测失败? 应该如何改进?
 \end{exercise}
 
 \begin{exercise}
     我们的大多数测试都基于整数排序, 面对其他类型的数据时, \texttt{isort}
-    的表现会如何? 为了处理更一般的数据, 你会如何改进测试框架程序?
+    的表现会如何? 为了处理更一般的数据, 应该如何改进测试框架程序?
 \end{exercise}
 
 \begin{exercise}
     \label{exer:time_used}
     我们默认每一种基本操作都需要相同的时间, 也就是说, 访问一个元素, 比较 
     两个元素的值, 加法, 赋值等操作所消耗的时间是相同的. 对于 awk 程序来说 
-    这个假设是否合理? 写一个处理大量数据的程序, 来验证你的想法.
+    这个假设是否合理? 写一个处理大量数据的程序验证你的想法.
 \end{exercise}
 \marginpar{160}
 
@@ -1440,7 +1440,7 @@ $t_1$, $t_2$, ..., $t_n$, 其中 $t_i$ 是文件名或另一个 \textit{name}.
 
 \begin{exercise}
     为常见的更新操作添加隐式规则, 例如, 使用 \texttt{cc} 编译 
-    \texttt{.c} 文件来生成 \texttt{.o} 文件. 你将会用什么方法来表示
+    \texttt{.c} 文件来生成 \texttt{.o} 文件. 你将用什么方法来表示
     隐式规则, 使得用户可以对这些规则进行修改?
 \end{exercise}
 
