--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -1543,7 +1543,7 @@ Awk 提供花括号用于语句组合, \verb'if-else' 用于决策, \verb'while'
 \begin{awkcode}
     {   i = 1
         while (i <= NF) {
-            print $1
+            print $i
             i++
         }
     }
