Use \centerline to center the xymatrix environment

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -960,8 +960,8 @@ $n \log n$ 程序性能之间的差距急剧加大.
 约束条件可以用一张图来表示, 图中的每个结点都用名字标记, 如果结点 \textit{x}
 必须先于 \textit{y} 出现, 那么就有一条边, 从 \textit{x} 指向 \textit{y}.
 下面这张图就是一个例子:
-% FIXME 图片应该居中才对
-\begin{center}
+
+\centerline{
 \xymatrix {
     *++=[o][F]{\texttt{a}}\ar"2,3"
     & *++=[o][F]{\texttt{b}}\ar"2,2"
@@ -973,7 +973,7 @@ $n \log n$ 程序性能之间的差距急剧加大.
     & *++=[o][F]{\texttt{h}}\ar"1,4"\ar"1,5"
     & *++=[o][F]{\texttt{i}}\ar"1,2" \\
 }
-\end{center}
+}
 
 如果存在一条边, 从 \textit{x} 指向 \textit{y}, 那么 \textit{x} 就是
 \textit{y} 的 \cterm{前驱} (\term{predecessor}), \textit{y} 是 \textit{x}
