Add a gap between xymatrix picture and bottom para

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -974,6 +974,7 @@ $n \log n$ 程序性能之间的差距急剧加大.
     & *++=[o][F]{\texttt{i}}\ar"1,2" \\
 }
 }
+\medskip
 
 如果存在一条边, 从 \textit{x} 指向 \textit{y}, 那么 \textit{x} 就是
 \textit{y} 的 \cterm{前驱} (\term{predecessor}), \textit{y} 是 \textit{x}
