Remove two FIXMEs in page 35/210 and 41/210
Add a '|' after 'c' can fix these two FIXMEs.

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -791,8 +791,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 \begin{tabular}{l|l|c}
 	\hline
 	\hline
-    % FIXME "意义" 与 "默认值" 之间本来应该有一条竖线
-	变量	& \multicolumn{1}{c}{意义}	& 默认值 \\
+	变量	& \multicolumn{1}{c|}{意义}	& 默认值 \\
 	\hline
 	\verb'ARGC'	& 命令行参数的个数	& - \\
 	\verb'ARGV'	& 命令行参数数组	& - \\
@@ -1129,8 +1128,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
         \begin{tabular}{l|p{25em}}
             \hline
             \hline
-            % FIXME "函数" 与 "描述" 之间本来应该有一条竖线
-            \multicolumn{1}{c}{函数}    & \multicolumn{1}{c}{描述}  \\
+            \multicolumn{1}{c|}{函数}    & \multicolumn{1}{c}{描述}  \\
             \hline
             \verb'gsub('\textit{r}\verb','\textit{s}\verb')' &  将
             \verb'$0' 中所有出现的 \textit{r} 替换为 \textit{s}, 返回
