将 "Exercise" 替换成 "习题"

--- a/latex_src/preamble.tex
+++ b/latex_src/preamble.tex
@@ -152,8 +152,8 @@
 \theoremstyle{plain}
 \theoremheaderfont{\bfseries}
 \theorembodyfont{\normalfont}
-\newtheorem{exercise}{Exercise}[chapter]
-\newcommand\myexer{\textbf{Exercise\ }}
+\newtheorem{exercise}{习题}[chapter]
+\newcommand\myexer{\textbf{习题\ }}
 
 % 设置目录中 subsection 的缩进
 \settowidth\cftsubsecindent{2}
