将 "little languages" 翻译成 "小语言"

--- a/latex_src/epilog.tex
+++ b/latex_src/epilog.tex
@@ -213,7 +213,7 @@ C 和 Pascal) 所具有的语法包袱, 所以 awk 学习起来非常简单, 它
 surprising number of people.}
 
 在 1985 年加入的特性, 尤其是自定义函数的支持, 催生出了许多未曾预料到的
-应用, 比如小型数据库系统和小型语言编译器. 在许多种情况下, awk 只是用
+应用, 比如小型数据库系统和小语言编译器. 在许多种情况下, awk 只是用
 来构造原型, 测试想法的可行性, 以及对特性和用户接口进行评测, 即使如此,
 在某些情况下, awk 程序仍然可以被当作一件真正的产品来使用. Awk 甚至被用
 到了软件工程课程中, 因为和大型语言相比, 使用 awk 对设计进行实验可能会
