--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1130,7 +1130,7 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 lines versus records (行与记录) 21, 60
 
-\hangindent=2pc \hangafter=1 little languages (小型语言) iv-v, 131, 152, 156, 159
+\hangindent=2pc \hangafter=1 little languages (小语言) iv-v, 131, 152, 156, 159
 
 \hangindent=2pc \hangafter=1 local variables (局部变量) 54, 116, 182
 
