--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -3,7 +3,7 @@
 \label{chap:little_languages}
 \marginpar{131}
 
-人们经常使用 awk 开发 ``小语言'' 的翻译器 (``小语言'' 指的特定于
+人们经常使用 awk 开发 ``小语言'' 的翻译器 (``小语言'' 指的是特定于
 某些应用领域的专用编程语言), 
 开发翻译器的原因主要有三点. 首先, 它可以帮助你了解语言处理程序的工作流程.
 本章的第一个例子是一个汇编程序, 虽然只有 20 来行, 但已经包含了汇编过程
