Using Chinese in picture on page 131/210

--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -41,13 +41,11 @@
     \draw[thick,<->]
         (2.0, 3.0) -- (1.0, 1.0);
 
-    \node[above] at (-5.0, 3.5) {source};
-    \node[below] at (-5.0, 3.5) {program};
-    \node at (-2.5, 3.5) {analyzer};
-    \node at (2.5, 3.5) {synthesizer};
-    \node[above] at (5.0, 3.5) {target};
-    \node[below] at (5.0, 3.5) {program};
-    \node at (0, 0.5) {symbol table};
+    \node[above] at (-5.0, 3.5) {源程序};
+    \node at (-2.5, 3.5) {分析器};
+    \node at (2.5, 3.5) {合成器};
+    \node[above] at (5.0, 3.5) {目标程序};
+    \node at (0, 0.5) {符号表};
 \end{tikzpicture}
 \end{center}
 
